IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Lead/fields/Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Interest__c</fullName>
    <label>Area of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>