IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Lead/fields/Preferred_Time_To__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time_To__c</fullName>
    <label>Preferred Time To</label>
    <type>Time</type>
</CustomField>