IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Lead/fields/preferredContactTimeFrom__c.field-meta.xml
<CustomField>
    <fullName>preferredContactTimeFrom__c</fullName>
    <label>Preferred Contact Time FROM</label>
    <type>Time</type>
</CustomField>