IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Lead/fields/UserNew__c.field-meta.xml
<CustomField>
    <fullName>UserNew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>