IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Lead/listViews/Copy_of_My_Open_Leads.listView-meta.xml
<ListView>
    <fullName>Copy_of_My_Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.RATING</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RATING</field>
        <operation>equals</operation>
        <value>Hot,Warm</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open - Not Contacted,Working - Contacted</value>
    </filters>
    <label>(Hot || Warm) &amp;&amp; Open Leads List</label>
</ListView>