IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Lead/listViews/My_Open_Leads.listView-meta.xml
<ListView>
    <fullName>My_Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.RATING</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open - Not Contacted,Working - Contacted</value>
    </filters>
    <label>My Open Leads</label>
</ListView>