IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Lead/listViews/Phone_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Phone_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Phone Queue</label>
    <queue>Phone_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>