IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Lead/listViews/Web_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Web_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Web Queue</label>
    <queue>Web_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>